Accurately fetching all books and setting proper state.

--- a/src/MyReadsApp.css
+++ b/src/MyReadsApp.css
@@ -1,16 +1,12 @@
-.App {
-  text-align: center;
+.books {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.book {
+  margin-bottom: 5em;
 }
 
 .App-header {
@@ -28,11 +24,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
