--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -4,7 +4,7 @@
 }
 
 .book__image {
-    max-width: 150%;
-    max-height: 100%;
+    width: auto;
+    max-height: fit-content;
     margin: 5px;
 }
