--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -1,10 +1,22 @@
 .book {
-    height: 250px;
-    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .book__image {
     width: auto;
     max-height: fit-content;
-    margin: 5px;
+    
+}
+
+.book__title {
+   font-weight: bold;
+}
+
+.book__authors {
+    display: flex;
+    flex-direction: column;
+    
 }
